# Sentinel

./: .clang-format  .clang-tidy  .clangd  .gitignore  .qmllint.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  Sentinel.code-workspace
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  release_check.md
.github/workflows/: linux-ci.yml  release.yml
apps/sentinel-desktop/: CMakeLists.txt  main.cpp
apps/sentinel-desktop/include/sentinel/desktop/: ChatMessageListModel.h  DesktopShellViewModel.h  NativeCompanionAdapter.h
apps/sentinel-desktop/src/: ChatMessageListModel.cpp  DesktopShellViewModel.cpp  NativeCompanionAdapter.cpp
core/: CMakeLists.txt
core/include/sentinel/core/: AgentActivityLog.h  AgentMetadata.h  AgentPipelineResult.h  AgentRuntimeContext.h  AgentRuntimeService.h  AgentTaskRuntime.h  AppBuildConfig.h.in  AppMetadata.h  AppSettings.h  ApplicationController.h  AudioFileSession.h  ChatMessage.h  ChatSession.h  CompanionService.h  ContextAssembly.h  ControlledAgentTasks.h  ConversationHistoryMetadata.h  ConversationSession.h  ConversationStateGraph.h  CredentialStore.h  ExecutionLifecycle.h  FakeProvider.h  IAgentRegistry.h  IAgentRuntime.h  IApprovalPolicy.h  IChatHistoryStore.h  IChatProvider.h  IClock.h  IContextEngine.h  IConversationStore.h  IIntegration.h  IMemoryCatalog.h  IMemoryStore.h  IModelRouter.h  INotificationService.h  IPathProvider.h  IPlatformService.h  IPlugin.h  IProvider.h  IProviderCatalog.h  (+63 more)
core/src/: AgentActivityLog.cpp  AgentRuntimeContext.cpp  AgentRuntimeService.cpp  AgentTaskRuntime.cpp  AppMetadata.cpp  AppSettings.cpp  ApplicationController.cpp  AudioFileSession.cpp  ChatSession.cpp  CompanionService.cpp  ContextAssembly.cpp  ControlledAgentTasks.cpp  ConversationSession.cpp  ConversationStateGraph.cpp  CredentialStore.cpp  ExecutionLifecycle.cpp  FakeProvider.cpp  IClock.cpp  IContextEngine.cpp  InMemoryConversationStore.cpp  InMemoryMemoryCandidateStore.cpp  InMemorySettingsStore.cpp  InMemoryStore.cpp  InMemoryToolRegistry.cpp  JsonSettingsStore.cpp  LocalEchoProvider.cpp  LocalInference.cpp  LocalRagStore.cpp  LocalRuntime.cpp  LocalRuntimeSession.cpp  MemoryCandidate.cpp  MemoryRecall.cpp  ModeManager.cpp  ModelManagement.cpp  ModelRegistry.cpp  NullAgentRuntime.cpp  NullToolExecutor.cpp  OllamaRuntime.cpp  OrchestrationDiagnostics.cpp  PermissionPolicyService.cpp  (+26 more)
docs/: ACCESSIBILITY.md  AI_CONTEXT.md  AI_ORCHESTRATION_PLAN.md  ARCHITECTURE.md  CI.md  CODE_STYLE.md  CONTROLLED_AGENTS.md  DECISIONS.md  DEVELOPMENT.md  DIAGNOSTICS.md  LOCAL_AI_ECOSYSTEM.md  LOCAL_RAG.md  NATIVE_EXPERIENCE.md  ONBOARDING.md  OPEN_SOURCE_ECOSYSTEM_REVIEW.md  PACKAGING.md  PHASE_11_CHECKPOINT.md  PHASE_12_CHECKPOINT.md  PHASE_13_CHECKPOINT.md  PHASE_15_CONVERSATION_CHECKPOINT.md  PHASE_16_MEMORY_CONTEXT_CHECKPOINT.md  PHASE_17_SEMANTIC_CHECKPOINT.md  PHASE_18_AGENT_VOICE_CHECKPOINT.md  PHASE_4_2_PLAN.md  PHASE_4_CHECKPOINT.md  PHASE_6_CHECKPOINT.md  PHASE_7_CHECKPOINT.md  PHASE_STATUS.md  PRIVACY.md  PROMPT_GUIDE.md  QA_PLAN.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SENTINEL_CAPABILITY_ROADMAP.md  SENTINEL_LONG_TERM_STRATEGY.md  SENTINEL_PRODUCT_REALIGNMENT.md  TESTING.md  UI_QA_CHECKLIST.md  UI_UX_PLAN.md  (+2 more)
integrations/: README.md
lovable-tasarim/src/: routeTree.gen.ts  styles.css
lovable-tasarim/src/components/sentinel/: AICore.tsx  Atmosphere.tsx  Dock.tsx  Panel.tsx  Shell.tsx  Sidebar.tsx  TopBar.tsx
lovable-tasarim/src/routes/: __root.tsx  agents.tsx  chat.tsx  index.tsx  memory.tsx
packaging/: README.md
packaging/linux/: dev.sentinel.Sentinel.desktop.in  dev.sentinel.Sentinel.metainfo.xml
plugins/: README.md
resources/macos/: Info.plist.in
resources/windows/: sentinel-desktop.rc.in
resources/windows/installer/: license.rtf
scripts/: Sign-Installer.ps1  release-qa.sh
tests/: CMakeLists.txt  README.md
tests/core/: test_agent_activity_log.cpp  test_agent_pipeline_result.cpp  test_agent_runtime_context.cpp  test_agent_runtime_service.cpp  test_agent_task_runtime.cpp  test_app_settings.cpp  test_application_controller.cpp  test_chat_session.cpp  test_companion_service.cpp  test_context_assembly.cpp  test_controlled_agent_tasks.cpp  test_conversation_session.cpp  test_conversation_state_graph.cpp  test_credential_store.cpp  test_in_memory_conversation_store.cpp  test_in_memory_memory_candidate_store.cpp  test_in_memory_store.cpp  test_in_memory_tool_registry.cpp  test_json_settings_store.cpp  test_local_echo_provider.cpp  test_local_inference.cpp  test_local_rag_store.cpp  test_local_runtime.cpp  test_local_runtime_session.cpp  test_mode_manager.cpp  test_model_registry.cpp  test_null_agent_runtime.cpp  test_null_tool_executor.cpp  test_ollama_runtime.cpp  test_orchestration_snapshot.cpp  test_permission_policy_service.cpp  test_provider_credentials.cpp  test_runtime_integration.cpp  test_runtime_provider.cpp  test_semantic_retrieval.cpp  test_skill_profile_service.cpp  test_sqlite_chat_history_store.cpp  test_sqlite_conversation_store.cpp  test_sqlite_memory_store.cpp  test_standard_path_provider.cpp  (+16 more)
tests/desktop/: test_desktop_shell_view_model.cpp
translations/: sentinel_en.ts  sentinel_tr.ts
ui/qml/: Main.qml  OnboardingScreen.qml  qmldir
ui/qml/components/: ActiveAgentsPanel.qml  Atmosphere.qml  BottomDock.qml  CognitionStreamPanel.qml  CommandPalette.qml  GlowSurface.qml  HeaderBar.qml  HomeChatSurface.qml  InfoRow.qml  ModelDetailPopup.qml  RuntimeBadge.qml  RuntimeDetailPopup.qml  SectionTitle.qml  SentinelButton.qml  SentinelDock.qml  SentinelMetricCard.qml  SentinelOrb.qml  SentinelOverlayModal.qml  SentinelTelemetry.qml  SentinelTextField.qml  ShellPanel.qml  Sidebar.qml  SignalField.qml  StatusBar.qml  StatusChip.qml  StatusPulse.qml  WorkspacePresence.qml
ui/qml/pages/: AgentsPage.qml  ChatPanel.qml  DashboardPage.qml  MemoryPage.qml  MetricCard.qml  ModelsPage.qml  SettingsPage.qml
ui/qml/theme/: InteractionTokens.qml  MotionTokens.qml  SentinelTheme.qml
