add_library(sentinel_core STATIC
    include/sentinel/core/AppMetadata.h
    include/sentinel/core/AppSettings.h
    include/sentinel/core/AudioFileSession.h
    include/sentinel/core/AgentActivityLog.h
    include/sentinel/core/AgentMetadata.h
    include/sentinel/core/AgentPipelineResult.h
    include/sentinel/core/AgentRuntimeContext.h
    include/sentinel/core/AgentTaskRuntime.h
    include/sentinel/core/ApplicationController.h
    include/sentinel/core/ChatMessage.h
    include/sentinel/core/ChatSession.h
    include/sentinel/core/ContextAssembly.h
    include/sentinel/core/ConversationSession.h
    include/sentinel/core/ConversationHistoryMetadata.h
    include/sentinel/core/ConversationStateGraph.h
    include/sentinel/core/ExecutionLifecycle.h
    include/sentinel/core/IAgentRuntime.h
    include/sentinel/core/IAgentRegistry.h
    include/sentinel/core/IChatHistoryStore.h
    include/sentinel/core/IChatProvider.h
    include/sentinel/core/IClock.h
    include/sentinel/core/IConversationStore.h
    include/sentinel/core/IContextEngine.h
    include/sentinel/core/IApprovalPolicy.h
    include/sentinel/core/IMemoryCatalog.h
    include/sentinel/core/IModelRouter.h
    include/sentinel/core/IProviderCatalog.h
    include/sentinel/core/ISandboxPolicy.h
    include/sentinel/core/IIntegration.h
    include/sentinel/core/INotificationService.h
    include/sentinel/core/IMemoryStore.h
    include/sentinel/core/IPathProvider.h
    include/sentinel/core/IPlatformService.h
    include/sentinel/core/IPlugin.h
    include/sentinel/core/ISettingsStore.h
    include/sentinel/core/ITaskPlanner.h
    include/sentinel/core/IToolExecutor.h
    include/sentinel/core/IToolRegistry.h
    include/sentinel/core/ISystemIntegrationService.h
    include/sentinel/core/InMemoryToolRegistry.h
    include/sentinel/core/InMemoryStore.h
    include/sentinel/core/InMemoryMemoryCandidateStore.h
    include/sentinel/core/InMemorySettingsStore.h
    include/sentinel/core/InMemoryConversationStore.h
    include/sentinel/core/JsonSettingsStore.h
    include/sentinel/core/LocalEchoProvider.h
    include/sentinel/core/LocalInference.h
    include/sentinel/core/LocalRuntime.h
    include/sentinel/core/LocalRuntimeSession.h
    include/sentinel/core/MemoryMetadata.h
    include/sentinel/core/MemoryCandidate.h
    include/sentinel/core/MemoryRecall.h
    include/sentinel/core/ModeManager.h
    include/sentinel/core/ModelManagement.h
    include/sentinel/core/ModelRegistry.h
    include/sentinel/core/ModelRouting.h
    include/sentinel/core/NullAgentRuntime.h
    include/sentinel/core/NullToolExecutor.h
    include/sentinel/core/OllamaRuntime.h
    include/sentinel/core/OrchestrationDiagnostics.h
    include/sentinel/core/OrchestrationSnapshot.h
    include/sentinel/core/PiperTts.h
    include/sentinel/core/ProviderCatalog.h
    include/sentinel/core/RuntimeCapabilities.h
    include/sentinel/core/RuntimeIntegration.h
    include/sentinel/core/RuntimePermissions.h
    include/sentinel/core/RuntimePipeline.h
    include/sentinel/core/RuntimeProvider.h
    include/sentinel/core/RuntimeSafety.h
    include/sentinel/core/SemanticRetrieval.h
    include/sentinel/core/SQLiteChatHistoryStore.h
    include/sentinel/core/SQLiteConversationStore.h
    include/sentinel/core/SQLiteMemoryStore.h
    include/sentinel/core/StandardPathProvider.h
    include/sentinel/core/StaticApprovalPolicy.h
    include/sentinel/core/StaticAgentRegistry.h
    include/sentinel/core/StaticMemoryCatalog.h
    include/sentinel/core/StaticModelRouter.h
    include/sentinel/core/StaticProviderCatalog.h
    include/sentinel/core/StaticSandboxPolicy.h
    include/sentinel/core/StaticTaskPlanner.h
    include/sentinel/core/TaskPlanning.h
    include/sentinel/core/ToolApproval.h
    include/sentinel/core/ToolDescriptor.h
    include/sentinel/core/ToolExecution.h
    include/sentinel/core/ToolInvocationPlan.h
    include/sentinel/core/ToolSandbox.h
    include/sentinel/core/Voice.h
    include/sentinel/core/WhisperTranscription.h
    src/AppMetadata.cpp
    src/AppSettings.cpp
    src/AudioFileSession.cpp
    src/AgentActivityLog.cpp
    src/AgentRuntimeContext.cpp
    src/AgentTaskRuntime.cpp
    src/ApplicationController.cpp
    src/ChatSession.cpp
    src/ContextAssembly.cpp
    src/ConversationSession.cpp
    src/ConversationStateGraph.cpp
    src/ExecutionLifecycle.cpp
    src/IClock.cpp
    src/IContextEngine.cpp
    src/InMemoryConversationStore.cpp
    src/InMemoryStore.cpp
    src/InMemoryMemoryCandidateStore.cpp
    src/InMemorySettingsStore.cpp
    src/InMemoryToolRegistry.cpp
    src/JsonSettingsStore.cpp
    src/LocalEchoProvider.cpp
    src/LocalInference.cpp
    src/LocalRuntime.cpp
    src/LocalRuntimeSession.cpp
    src/ModeManager.cpp
    src/MemoryCandidate.cpp
    src/MemoryRecall.cpp
    src/ModelManagement.cpp
    src/ModelRegistry.cpp
    src/NullAgentRuntime.cpp
    src/NullToolExecutor.cpp
    src/OllamaRuntime.cpp
    src/OrchestrationDiagnostics.cpp
    src/PiperTts.cpp
    src/RuntimeCapabilities.cpp
    src/RuntimeIntegration.cpp
    src/RuntimePermissions.cpp
    src/RuntimePipeline.cpp
    src/RuntimeProvider.cpp
    src/RuntimeSafety.cpp
    src/SemanticRetrieval.cpp
    src/SQLiteChatHistoryStore.cpp
    src/SQLiteConversationStore.cpp
    src/SQLiteMemoryStore.cpp
    src/StandardPathProvider.cpp
    src/StaticApprovalPolicy.cpp
    src/StaticAgentRegistry.cpp
    src/StaticMemoryCatalog.cpp
    src/StaticModelRouter.cpp
    src/StaticProviderCatalog.cpp
    src/StaticSandboxPolicy.cpp
    src/StaticTaskPlanner.cpp
    src/Voice.cpp
    src/WhisperTranscription.cpp
)

target_include_directories(sentinel_core
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(sentinel_core
    PUBLIC
        Qt6::Core
        Qt6::Network
        Qt6::Sql
)

target_compile_features(sentinel_core PUBLIC cxx_std_20)
